Fix imports for newer versions of libraries